--- a/popup.html
+++ b/popup.html
@@ -15,10 +15,11 @@
        <button id="evalGrade">ประมวลผลเกรด</button>
        <p>จากนั้น คัดลอกคะแนนของนักเรียนจากโปรแกรม speadsheet และ ctrl+v กดปุ่มบันทึก เป็นอันเสร็จ</p>
        <p>การกรอก คุณลักษณะอันพึงประสงค์/อ่าน คิด วิเคราะห์ (beta)</p>
-       <p>1. กด s บันทึกไฟล์ดัชณีของนักเรียนที่ได้เกรดในระดับต่าง ๆ</p>
+       <p>1. กด s บันทึกไฟล์ดัชณีของนักเรียนที่ได้เกรดในระดับต่าง ๆ (โดยจะต้องกดปุ่มประมวลผลก่อนใช้ฟังก์ชันนี้)</p>
        <p>2. กด o เปิดไฟล์เพื่อโหลดข้อมูลเข้าหน้าเว็บ (จะต้องเปิดทุกครั้ง)</p>
-       <p>3. กด k ประมวลผลลักษณะอันพึงประสงค์</p>
+       <p>3. กด k ประมวลผลคุณลักษณะอันพึงประสงค์</p>
        <p>3. กด l ประมวลผลอ่าน คิด วิเคราะห์</p>
+       <p>4. กด r ลบสีกรอบช่อง input ทั้งหมด</p>
 
 </body>
 </html>
