--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,8 @@
   <script src="popup.js"></script>
 </head>
 <body>
-  This is the <span class="special-text">SGS Super Fast Paste</span> page.
+  This is the <span class="special-text">SGS Super Fast Paste Custom</span> page.
+  <pre>v.25-09-30</pre>
        <h4>📢คำชี้แจง</h4>
        <p>ให้คุณครูเปิด sgs ไปที่เมนู > งานวัดผล > บันทึกผลการเรียน ตลอดภาคเรียน > เลือกกรอก</p>
        <button id="midTerm">กลางภาค</button>
@@ -17,8 +18,8 @@
        <p>การกรอก คุณลักษณะอันพึงประสงค์/อ่าน คิด วิเคราะห์ (beta)</p>
        <p>1. กด s บันทึกไฟล์ดัชณีของนักเรียนที่ได้เกรดในระดับต่าง ๆ (โดยจะต้องกดปุ่มประมวลผลก่อนใช้ฟังก์ชันนี้)</p>
        <p>2. กด o เปิดไฟล์เพื่อโหลดข้อมูลเข้าหน้าเว็บ (จะต้องเปิดทุกครั้ง)</p>
-       <p>3. กด k ประมวลผลคุณลักษณะอันพึงประสงค์</p>
-       <p>3. กด l ประมวลผลอ่าน คิด วิเคราะห์</p>
+       <p>3. กด k ประมวลผลคุณลักษณะอันพึงประสงค์ และกรอกคะแนนให้ เฉพาะ 2.5</p>
+       <p>3. กด l ประมวลผลอ่าน คิด วิเคราะห์ และกรอกคะแนนให้ เฉพาะ 2.5</p>
        <p>4. กด r ลบสีกรอบช่อง input ทั้งหมด</p>
 
 </body>
